--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -32,7 +32,7 @@ sleep_productivity <- sleep_productivity_stress |>
          weekday_productivity_level)
 ```
 
-# Introduction
+## Introduction
 
 Imagine waking up after only a few hours of sleep, then dragging your tired body through hours of coursework, assignments, and even exams! Now imagine doing that mostly everyday, for a duration of months? According to @averagesleepduration and @recommendedsleep, most college students only get 6-6.9 hours of sleep per day on average while the recommended amount for college students is 7-9 hours. Even though it is understandable that there are certain deadlines, exams, or just work generally that seems to be more important than few extra hours of sleep, this constant trade-off may lead to unexpected consequences to both their physical and mental health.
 
@@ -40,9 +40,9 @@ This project aims to investigate the relationship between sleep duration and one
 
 The data for this study was collected through a survey on Google Form. Our target population is college students, and our sample included students from different colleges such as Smith College, Amherst College, UMASS Amherst, etc. We mainly used a convenience sampling method, gathering many of our survey responses from our friends and acquaintances who are college students. We are investigating whether the amount of sleep a college student gets influence their productivity using **Two-Way Table Test of Independence** with **Chi-square Distribution**.
 
-# Exploratory Data Analysis
+## Exploratory Data Analysis
 
-## Main Sample Questions
+### Main Sample Questions
 
 1.  **How long do you sleep during weekdays, on average?**
 
@@ -56,9 +56,9 @@ a.  Not productive
 b.  Somewhat productive
 c.  Very productive
 
-## About the Data
+### About the Data
 
-### Data Collection
+#### Data Collection
 
 Our target population is college students. 
 
@@ -66,19 +66,19 @@ This data is collected through Google Form. We used convenience sampling with re
 
 Other than directly sending to our friends at Smith, we posted it on Smith Confession to seek certain diversity and independence in Smithies observations. Evelyn also had her Vietnamese friends posted it on Meta posts and stories to seek responses from their network of Vietnamese college students; her other friends in other USA colleges also requested their acquaintances to fill out the survey, which helps widen the scope of the survey observation to students from other colleges.
 
-### Dataset Introduction
+#### Dataset Introduction
 
 We collected **90 responses** i.e. observations through our survey for **6 variables** in total, including major division, class year, whether the respondent is an early bird or a night owl, their average amount of sleep during weekday in hours, their average productivity level during weekday.
 
 We use **2 variables** - their average amount of sleep during weekday in hours and their average productivity level during weekday. Specifically, we consider the weekday average amount of sleep to be our **explanatory variable** and the weekday average productivity level to be our **response variable**. Both variables are **ordinal** and **categorical**. 
 
-### Data Wrangling
+#### Data Wrangling
 
 Since we used multiple choice and check-boxes for most of our questions, we do not have to re-code the variables for consistency. Our questions regarding sleep duration, productivity, and stress level are also required, so we don't have any missing values in our data sets. However, since the variables are first named by the questions with space and capitalization, we have to clean the names and rename them to make sure they are concise and effective. We created 1 subset of the data set - sleep and productivity level with 2 variables regarding sleep duration and productivity level.
 
-### Variable Distribution
+#### Variable Distribution
 
-#### Weekday Sleep Duration
+##### Weekday Sleep Duration
 
 ```{r}
 #| label: fig-sleep
@@ -106,7 +106,7 @@ sleep_productivity_stress |>
 
 From @fig-sleep, it is noticeable that nearly half of the observed college students, 44 out of 90 observations, sleep for 5-7 hours on average during weekdays. About 26 observations sleep for more than 7 hours on average during weekdays, while only 20 observations sleep for less than 5 hours on average during weekdays.
 
-#### Weekday Productivity Level
+##### Weekday Productivity Level
 
 ```{r}
 #| label: fig-productivity
@@ -133,7 +133,7 @@ sleep_productivity_stress |>
 
 From @fig-productivity, it can be seen that the majority, 47 out of 90, of observed college students feel somewhat productive on average during weekday. Nearly $1/3$ of the observations feel very productive on average during weekday while only 15 out of 90 observations do not feel productive on average during weekday.
 
-## Sleep Duration vs. Productivity Level
+### Sleep Duration vs. Productivity Level
 
 Since college students' weekday average sleep duration and their weekday average productivity level are both **categorical variables**, we are using a **contingency table** as well as **stacked bar plot** to visualize their distribution and potential association.
 
@@ -179,17 +179,17 @@ sleep_productivity_stress |>
 
 It is noticeable that college students who sleep 5-7 hours make up the majority of "somewhat productive" group with 29 students while those who sleep less than 5 hours have the highest number of individuals in the "very productive" group with 12 students For both the "not productive" and "very productive" group, the number of college students sleeping 5-7 hours and more than 7 hours is the same. Surprisingly, in the "not productive" category, 7 students each reported sleeping 5-7 hours and more than 7 hours, both are significantly higher than the number of students sleeping less than 5 hours, which was only 1.
 
-# Results
+## Results
 
-### Type of Test
+#### Type of Test
 
 Since college students' weekday average sleep duration and their weekday average productivity level are both **categorical variables** with each of them have 3 categories, we use inference of two-way tables. Therefore we are using the **Two-Way Table Test of Independence** with **Chi-square Distribution** through the **Mathematical Model**.
 
-### Hypotheses
+#### Hypotheses
 
 Our null hypothesis $H_0$ is that college students' sleep duration and productivity level are independent. Our alternative hypothesis is that college students' sleep duration and productivity level are dependent.
 
-### Conditions
+#### Conditions
 
 The Conditions for Two-Way Table Test of Independence include **Independence**, in which the data values were collected were from a random sample, and **Large Sample**, in which $e_{i,j} \geq 5$ for each cell.
 
@@ -213,9 +213,9 @@ For the **Large Sample** condition, there are 2 expected counts that do not meet
 
 **Note**: Because of both conditions not met, the test statistics $\chi^2$ may not have a Chi-squared Distribution. However, we will still run the Two-Way Table Inference of Independence.
 
-### Chi-Square Testing
+#### Chi-Square Testing
 
-#### Test Statistics
+##### Test Statistics
 
 ```{r}
 #| echo: false
@@ -228,7 +228,7 @@ print(chi_square_test)
 
 Assuming that conditions for the Mathematical Model of the Two-Way Table Test of Independence are met and $H_0$ is true, our test statistic $\chi^2 = 14.223$, which is a ratio of how the observed counts vary from the expected counts as compared to the expected counts, has a **Chi-squared Distribution** with the parameter **degrees of freedom** having the value of $df = (R-1)(C-1) = (3-1)(3-1) = 4$ in which R represents the number of rows and C represents the number of columns. 
 
-#### p-value Mathematical Model Plot
+##### p-value Mathematical Model Plot
 
 ```{r}
 #| label: fig-chi-square
@@ -253,11 +253,11 @@ Given that we only take the shaded right tail area to calculate our p-value, our
 
 We choose our significance level $\alpha = .01$ to control the Type 1 error rate in which we concluded that college students' sleep duration and productivity level are dependent when they are in fact independent.
 
-#### Conclusion & Interpretation
+##### Conclusion & Interpretation
 
 Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that college students' sleep duration and productivity level are significantly related. The data provides statistically significant evidence to support the claim that sleep duration is significantly related to productivity level at $\alpha = .01$ significance level. Therefore, it is reasonable to believe that the amount of sleep a college student get influences their productivity level.
 
-# Discussion
+## Discussion
 
 The statistical analysis above set out to test the relationship between weekday average hours of sleep and productivity level in college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets influences their productivity level, which answers our original research question. Our population of interest was all college students, but our sample is not accurately representative of the population of interest. Our data includes observations from students at multiple colleges, but which colleges we received data from is based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
 
@@ -273,4 +273,4 @@ This is reaffirmed by the results of another related analysis of medical student
 
 Many other analyses could be conducted with the data we gathered using this form. These other variables dictate the most feasible and convenient possible future extensions to this research project. Our Google Form collected a total of six variables, only two of which were used for the statistical analysis conducted above. The variables we did not use include class year, major division, whether the respondent considers themselves an early bird or a night owl, and stress level (as a categorical variable formulated similarly to those used in the analysis carried out above). Based on these variables, we could consider examining whether stress (or productivity) levels vary based on major division or class year. We could also evaluate whether being an early bird or a night owl is correlated with higher or lower stress or productivity levels. Beyond the scope of the dataset we have collected, we could consider using random sampling to select colleges throughout the world from which to collect data, and then randomly sample students enrolled there in order to compile a larger and more robust data set. Statistical analyses of this dataset would yield results generalizable to the entire target population of college students.
 
-# Bibliography
+## Bibliography
