--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -211,11 +211,11 @@ kable(round(expected_counts, 2))
 
 For the **Large Sample** condition, there are 2 expected counts that do not meet the criteria of $e_{i,j} \geq 5$ - $e_{2,1}$ and $e_{3,1}$ - as shown in @tbl-sleep-productivity-expected. Thus, Large Sample condition for Two-Way Table Test of Independence is not met.
 
-**Note**: Because of both conditions not met, the test statistics $\chi^2$ may not have a Chi-squared Distribution. However, we will still run the Two-Way Table Inference of Independence.
+**Note**: Because of both conditions not met, the test statistics $\chi^2$ may not have a Chi-square Distribution. However, we will still run the Two-Way Table Inference of Independence.
 
 #### Chi-Square Testing
 
-##### Test Statistics
+##### Test Statistics & Null Distribution
 
 ```{r}
 #| echo: false
@@ -226,12 +226,26 @@ For the **Large Sample** condition, there are 2 expected counts that do not meet
 print(chi_square_test)
 ```
 
-Assuming that conditions for the Mathematical Model of the Two-Way Table Test of Independence are met and $H_0$ is true, our test statistic $\chi^2 = 14.223$, which is a ratio of how the observed counts vary from the expected counts as compared to the expected counts, has a **Chi-squared Distribution** with the parameter **degrees of freedom** having the value of $df = (R-1)(C-1) = (3-1)(3-1) = 4$ in which R represents the number of rows and C represents the number of columns. 
+Assuming that conditions for the Mathematical Model of the Two-Way Table Test of Independence are met and $H_0$ is true, our test statistic $\chi^2 = 14.223$, which is a ratio of how the observed counts vary from the expected counts as compared to the expected counts, has a **Chi-square Distribution** with the parameter **degrees of freedom** having the value of $df = (R-1)(C-1) = (3-1)(3-1) = 4$ in which R represents the number of rows and C represents the number of columns.
+
+Our null distribution, as shown in @fig-chi-square, is a **Chi-square Distribution** which is always right-skewed, only has positive values, and has a parameter of $df = 4$. The degree of freedom changes the shape of the Chi-square distribution in which the higher the degrees of freedom, the less skewed, more symmetric, more spread the distribution will be, and the further will the peak shift rightward.
+
+```{r}
+#| label: fig-chi-square
+#| fig-cap: "Chi-square Distribution of df = 4"
+#| echo: false
+#| message: false
+#| warning: false
+
+curve(dchisq(x, df = 4), col = 'black',  from = 0,to = 25, 
+      xlab = "", ylab = "", xaxt = "n",  yaxt = "n")
+```
+
 
 ##### p-value Mathematical Model Plot
 
 ```{r}
-#| label: fig-chi-square
+#| label: fig-chi-square-p-value
 #| fig-cap: "Chi-square Distribution of df = 4 and p-value (shaded right-tail area)"
 #| echo: false
 #| message: false
@@ -247,9 +261,7 @@ polygon(c(xvec, rev(xvec)), c(pvec, rep(0, length(pvec))),
 abline(v = test_stat, col = "red", lwd = 2)
 ```
 
-Our null distribution, as shown in @fig-chi-square, is a **Chi-square Distribution** which is always right-skewed, only has positive values, and has a parameter of $df = 4$. The degree of freedom changes the shape of the Chi-squared distribution in which the higher the degrees of freedom, the less skewed, more symmetric, more spread the distribution will be, and the further will the peak shift rightward.
-
-Given that we only take the shaded right tail area to calculate our p-value, our $p-value = .006615$. This means that the probability that we observe our $\chi^2$ as large as $14.223$ or larger is $.006615$.
+Given that we only take the shaded right tail area, as shown in @fig-chi-square-p-value, to calculate our p-value, our $p-value = .006615$. This means that the probability that we observe our $\chi^2$ as large as $14.223$ or larger is $.006615$.
 
 We choose our significance level $\alpha = .01$ to control the Type 1 error rate in which we concluded that college students' sleep duration and productivity level are dependent when they are in fact independent.
 
