minor wording edit

--- a/citation.bib
+++ b/citation.bib
@@ -36,3 +36,15 @@
   year = {2023},
   doi = {10.69656/pjp.v19i3.1551}
 }
+
+@article{okano2019sleep,
+  title = {Sleep quality, duration, and consistency are associated with better academic performance in college students},
+  author = {Okano, Kana and Kaczmarzyk, Jakub R and Dave, Neha and Gabrieli, John DE and Grossman, Jeffrey C},
+  journal = {NPJ science of learning},
+  volume = {4},
+  number = {1},
+  pages = {16},
+  year = {2019},
+  publisher = {Nature Publishing Group UK London},
+  doi = {10.1038/s41539-019-0055-z}
+}
